--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,28 +1,56 @@
-dateModified: 1676632717
+dateModified: 1677234831
+elementSources:
+  craft\elements\Asset:
+    -
+      defaultSort:
+        - dateCreated
+        - desc
+      disabled: false
+      key: 'volume:3ed0cc78-6b93-46f3-868e-46554089d28f' # Narrowcasting
+      tableAttributes:
+        - filename
+        - size
+        - dateModified
+        - link
+      type: native
+    -
+      defaultSort:
+        - dateCreated
+        - desc
+      disabled: false
+      key: 'folder:2776cf66-4828-4636-9707-c75a94d4ed1a'
+      tableAttributes:
+        - filename
+        - size
+        - dateModified
+        - link
+      type: native
 email:
   fromEmail: alyxia@riseup.net
   fromName: craft
   transportType: craft\mail\transportadapters\Sendmail
 fs:
-  blog:
+  narrowcasting:
     hasUrls: true
-    name: Blog
+    name: Narrowcasting
     settings:
-      path: '@webroot/assets/blog'
+      path: '@webroot/assets/narrowcasting'
     type: craft\fs\Local
-    url: '@web/assets/blog'
+    url: '@web/assets/narrowcasting'
 meta:
   __names__:
     0ceb5003-324b-47f9-b336-5716ff21c825: Text # Text
     2fe47f5e-f465-4d4b-bafc-db94fcd20d62: 'Narrowcasting Slides' # Narrowcasting Slides
-    3ed0cc78-6b93-46f3-868e-46554089d28f: Blog # Blog
+    3ed0cc78-6b93-46f3-868e-46554089d28f: Narrowcasting # Narrowcasting
     4e315b8e-e012-4f17-818b-a5b0c6189d80: Default # Default
     9bed703c-0031-4c03-a49d-1ca4cc0fa5a2: craft # craft
     9c11c497-5e71-4c81-afd3-317c35414085: Narrowcasting # Narrowcasting
     9d29337f-6b3e-47b2-8ff0-aaf4151cda6d: Common # Common
     59e177d9-17ab-4c27-8528-0f817fae7c25: craft # craft
+    928623f8-903d-4bb2-bb3e-c2b71c6d8b1d: media # media
     d5eac6f2-f301-4348-b212-c25460e2b3d9: text # text
     d33c5983-4dff-4b6a-9aaa-7128c8c7c889: Slides # Slides
+    ee5459e3-ec14-4342-9e3a-fc007e6a5238: Media # Media
 plugins:
   redactor:
     edition: standard
