[Meta] Set up ESLint

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
 		"eslint-config-dmitmel": "github:dmitmel/eslint-config-dmitmel",
 		"prettier": "^2.8.4",
 		"prettier-plugin-twig-melody": "^0.4.6"
+	},
+	"dependencies": {
+		"eslint": "^8.35.0"
 	}
 }
