--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "craftcms/cms": "^4.3.5",
+    "craftcms/cms": "4.3.10",
     "craftcms/redactor": "^3.0",
     "vlucas/phpdotenv": "^5.4.0"
   },
