--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "repositories": [
     {
       "type": "path",
-      "url": "./craft-narrowcasting"
+      "url": "plugins/narrowcasting"
     }
   ],
   "require": {
