--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -125,13 +125,13 @@ nodejs_version: "16"
 # fail_on_hook_fail: False
 # Decide whether 'ddev start' should be interrupted by a failing hook
 
-# host_https_port: "59002"
+host_https_port: "59002"
 # The host port binding for https can be explicitly specified. It is
 # dynamic unless otherwise specified.
 # This is not used by most people, most people use the *router* instead
 # of the localhost port.
 
-# host_webserver_port: "59001"
+host_webserver_port: "59001"
 # The host port binding for the ddev-webserver can be explicitly specified. It is
 # dynamic unless otherwise specified.
 # This is not used by most people, most people use the *router* instead
@@ -195,7 +195,7 @@ nodejs_version: "16"
 # This is to enable experimentation with alternate file mounting strategies.
 # For advanced users only!
 
-# bind_all_interfaces: false
+bind_all_interfaces: true
 # If true, host ports will be bound on all network interfaces,
 # not just the localhost interface. This means that ports
 # will be available on the local network if the host firewall
