--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
   ],
   "require": {
     "brikdigital/craft-narrowcasting": "dev-master",
-    "craftcms/cms": "4.3.10",
-    "craftcms/redactor": "^3.0",
+    "craftcms/cms": "4.4.9",
+    "craftcms/redactor": "3.0.4",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
