--- a/.env.example.dev
+++ b/.env.example.dev
@@ -21,6 +21,6 @@ CRAFT_DB_SCHEMA=public
 CRAFT_DB_TABLE_PREFIX=
 
 # General settings (see config/general.php)
-DEV_MODE=true
+DEV_MODE=1
 ALLOW_ADMIN_CHANGES=true
 DISALLOW_ROBOTS=true
