--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1683281512
+dateModified: 1683619684
 elementSources:
   craft\elements\Asset:
     -
@@ -42,11 +42,11 @@ meta:
     0ceb5003-324b-47f9-b336-5716ff21c825: Text # Text
     2fe47f5e-f465-4d4b-bafc-db94fcd20d62: 'Narrowcasting Slides' # Narrowcasting Slides
     3ed0cc78-6b93-46f3-868e-46554089d28f: Narrowcasting # Narrowcasting
-    4e315b8e-e012-4f17-818b-a5b0c6189d80: Default # Default
     9bed703c-0031-4c03-a49d-1ca4cc0fa5a2: narrowcasting # narrowcasting
     9c11c497-5e71-4c81-afd3-317c35414085: Narrowcasting # Narrowcasting
     9d29337f-6b3e-47b2-8ff0-aaf4151cda6d: Common # Common
     9eb78600-e611-43fc-9c72-f7ee4d188cee: Media # Media
+    13ae5af0-a73b-4f42-b8de-035d0bb19544: Autoplay # Autoplay
     59e177d9-17ab-4c27-8528-0f817fae7c25: narrowcasting # narrowcasting
     793d26f5-7e0c-4d7d-9aca-51ac93b5b7e0: 'Background Colour' # Background Colour
     2928f6e5-130a-431d-a1f3-df296cd1f46a: 'Text Colour' # Text Colour
@@ -55,6 +55,7 @@ meta:
     a27b6d9b-05b5-46d6-aa08-6094d75094f2: 'Text Colour' # Text Colour
     a7316bd8-0e45-41fb-bad7-6e74a6f2a902: 'Background Colour' # Background Colour
     adf70b30-6427-4956-b57f-e58fd68c05e9: 'Public Schema' # Public Schema
+    bb457270-2eb0-4428-8f92-0f0025dfec80: Narrowcasting # Narrowcasting
     ce2c8583-c7bf-4d08-b9a0-cf6557c1d401: Text # Text
     d5eac6f2-f301-4348-b212-c25460e2b3d9: 'Text slide' # Text slide
     d33c5983-4dff-4b6a-9aaa-7128c8c7c889: Slides # Slides
