[config] Add the transitions field to cast

--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1683628270
+dateModified: 1683803785
 elementSources:
   craft\elements\Asset:
     -
@@ -42,6 +42,7 @@ meta:
     0ceb5003-324b-47f9-b336-5716ff21c825: Text # Text
     2fe47f5e-f465-4d4b-bafc-db94fcd20d62: 'Narrowcasting Slides' # Narrowcasting Slides
     3ed0cc78-6b93-46f3-868e-46554089d28f: Narrowcasting # Narrowcasting
+    5bfdcf29-fa8a-4c67-a0bd-334fd6102686: Transition # Transition
     9bed703c-0031-4c03-a49d-1ca4cc0fa5a2: narrowcasting # narrowcasting
     9c11c497-5e71-4c81-afd3-317c35414085: Narrowcasting # Narrowcasting
     9d29337f-6b3e-47b2-8ff0-aaf4151cda6d: Common # Common
